--- a/web/assets/scss/front/app.scss
+++ b/web/assets/scss/front/app.scss
@@ -13,6 +13,8 @@ $web-font-path: 'data:text/css;base64,';
 @import '~@fancyapps/fancybox/dist/jquery.fancybox.css';
 @import '../../libs/starrating/css/rating.css';
 @import "~@fortawesome/fontawesome-free/css/all.css";
+@import '~slick-carousel/slick/slick.scss';
+@import '~slick-carousel/slick/slick-theme.scss';
 
 @import "global/fonts";
 @import "global/color_variables";
