--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -5,11 +5,9 @@
             <div class="col-12 col-md-12 col-lg-3">
                 <h3 class="text-uppercase">Thông tin</h3>
                 <div>
-                    <p>685 Market Street</p>
-                    <p>San Francisco, CA 94105,</p>
-                    <p>United States</p>
-
-                    <p>Call us at: 1-888-699-8900</p>
+                    <p>Thực Phẩm Organic chuyên cung cấp các loại trái cây sấy khô tự nhiên và organic hàng nhập từ Mỹ. Ngoài trái cây sấy còn có các loại hạt , bánh</p>
+                    <p>118/10B Đông Hưng Thuận 5, Tân Hưng Thuận, Q.12</p>
+                    <p>Call us at: 0909 000 111</p>
                     <p>Email: support@halothemes.com</p>
                 </div>
             </div>
@@ -17,10 +15,16 @@
                 <h3 class="text-uppercase">Danh mục</h3>
                 <ul class="about-us">
                     <li>
-                        <a href="#">Chăm sóc da</a>
+                        <a href="{{ path('shop_category', {'level1': 'cham-soc-da' }) }}" title="Chăm sóc da">Chăm sóc da</a>
                     </li>
                     <li>
-                        <a href="#">Chăm sóc tóc</a>
+                        <a href="{{ path('shop_category', {'level1': 'cham-soc-toc' }) }}" title="Chăm sóc tóc">Chăm sóc tóc</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('shop_category', {'level1': 'cham-soc-suc-khoe' }) }}" title="Chăm sóc sức khỏe">Chăm sóc sức khỏe</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('shop_category', {'level1': 'me-va-be' }) }}" title="Mẹ và bé">Mẹ và bé</a>
                     </li>
                 </ul>
             </div>
@@ -28,10 +32,13 @@
                 <h3 class="text-uppercase">Hỗ trợ</h3>
                 <ul class="about-us">
                     <li>
-                        <a href="#">Chính sách bảo hành</a>
+                        <a href="{{ path('news_show', {'slug': 'chinh-sach-bao-hanh' }) }}" title="Chính sách bảo hành">Chính sách bảo hành</a>
                     </li>
                     <li>
-                        <a href="#">Tuyển dụng cộng tác viên</a>
+                        <a href="{{ path('news_show', {'slug': 'tuyen-dai-ly-cong-tac-vien' }) }}" title="Tuyển đại lý, cộng tác viên">Tuyển đại lý, cộng tác viên</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('contact') }}">Liên hệ</a>
                     </li>
                 </ul>
             </div>
@@ -39,7 +46,7 @@
                 <h3 class="text-uppercase">Fanpage</h3>
                 <div>
                     <div class="fb-page"
-                        data-href="https://www.facebook.com/xaydungkimanh/"
+                        data-href="https://www.facebook.com/trirungtocNhaVyShop/"
                         data-tabs="timeline"
                         data-width="555"
                         data-height="277"
@@ -47,14 +54,14 @@
                         data-adapt-container-width="true"
                         data-hide-cover="true"
                         data-show-facepile="true">
-                        <blockquote cite="https://www.facebook.com/xaydungkimanh/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/xaydungkimanh/">Xây Nhà, Sửa Chữa Nhà Kim Anh</a></blockquote>
+                        <blockquote cite="https://www.facebook.com/trirungtocNhaVyShop/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/trirungtocNhaVyShop/">Dầu Gội Bưởi Nga Hoàng Ngăn Rụng Tóc</a></blockquote>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row footer-middle">
-            <div class="col-12 col-md-12 col-lg-12">
-                <p class="text-center">Copyright © {{ "now"|date('Y') }} <a href="https://xaydungminhduy.com/" title="Xây Dựng Minh Duy">Xây Dựng Minh Duy</a>, all rights reserved.</p>
+            <div class="col-12 col-md-12 col-lg-12 copyright">
+                <p class="text-center">Copyright © {{ "now"|date('Y') }} <a href="{{ path('homepage') }}" title="Lily House">Lily House</a>, all rights reserved.</p>
             </div>
         </div>
     </div>
