--- a/app/Resources/views/layout/footer_UI.html.twig
+++ b/app/Resources/views/layout/footer_UI.html.twig
@@ -4,4 +4,5 @@
 <script src="{{ asset('build/js/app.js') }}"></script>
 <script src="{{ asset('assets/libs/lazyload/js/lazysizes.min.js') }}" async></script>
 
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51488205306afdd5" async="async"></script>
