--- a/app/Resources/views/product/list.html.twig
+++ b/app/Resources/views/product/list.html.twig
@@ -29,7 +29,7 @@
                                                 <p class="link-action-wrapper">
                                                     <a href="/collections/lorem-dorus">
                                                         <span>
-                                                            Lorem Dorus
+                                                            Chăm sóc da
                                                         </span>
                                                     </a>
                                                 </p>
@@ -38,7 +38,7 @@
                                                 <p class="link-action-wrapper">
                                                     <a href="/collections/all">
                                                         <span>
-                                                            Milancelos
+                                                            Chăm sóc tóc
                                                         </span>
                                                     </a>
                                                 </p>
@@ -47,7 +47,7 @@
                                                 <p class="link-action-wrapper">
                                                     <a href="#">
                                                         <span>
-                                                            Cosmopolis
+                                                            Chăm sóc sức khỏe
                                                         </span>
                                                     </a>
                                                 </p>
@@ -56,25 +56,7 @@
                                                 <p class="link-action-wrapper">
                                                     <a href="#">
                                                         <span>
-                                                            Nor Loremirus
-                                                        </span>
-                                                    </a>
-                                                </p>
-                                            </li>
-                                            <li class="sidebar-link-lv1">
-                                                <p class="link-action-wrapper">
-                                                    <a href="#">
-                                                        <span>
-                                                            Comos Milano
-                                                        </span>
-                                                    </a>
-                                                </p>
-                                            </li>
-                                            <li class="sidebar-link-lv1">
-                                                <p class="link-action-wrapper">
-                                                    <a href="#">
-                                                        <span>
-                                                            Dapibor
+                                                            Mẹ và bé
                                                         </span>
                                                     </a>
                                                 </p>
