--- a/web/assets/scss/front/pages/_product.scss
+++ b/web/assets/scss/front/pages/_product.scss
@@ -101,6 +101,56 @@
         margin-bottom: 18px;
         display: block;
     }
+
+    .group_item {
+        .spr-badge {
+            .rating {
+                margin-bottom: 9px;
+                width: 100%;
+                display: block;
+
+                .star-full, .star, .star-empty  {
+                    font-size: 18px;
+
+                    &::before {
+                        padding-right: 0;;
+                    }
+                }
+
+                .spr-badge-caption {
+                    display: none;
+                }
+            }
+        }
+    }
+
+    .prices {
+        letter-spacing: 0;
+        margin-bottom: 15px;
+        font-size: 18px;
+        font-weight: bold;
+
+        .price-regular {
+            color: $black;
+        }
+
+        .price-sale {
+            .old-price {
+                color: #969696;
+                text-decoration: line-through;
+                margin-right: 5px;
+            }
+
+            .special-price {
+                color: #e7040f;
+            }
+        }
+    }
+
+    .short-description {
+        margin-bottom: 25px;
+        font-size: 15px;
+    }
 }
 
 .products-item {
@@ -183,6 +233,151 @@
 
                     .special-price {
                         color: #e7040f;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.product_bottom {
+    margin-top: 40px;
+
+    .tabs__product-page {
+        margin-bottom: 30px;
+
+        .nav-tabs {
+            margin-bottom: 30px;
+            border-bottom: 1px solid #e6e6e6;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-flex;
+            display: -ms-flexbox;
+            display: flex;
+
+            li {
+                margin: 0 -1px 0 0;
+
+                &.active {
+                    a {
+                        background-color: #fff;
+                        margin-bottom: -1px;
+
+                        &::before {
+                            background-color: #555555;
+                        }
+                    }
+                }
+
+                a {
+                    padding: 10px 35px 10px;
+                    border: 1px solid #ececec;
+                    border-bottom: none;
+                    background-color: #fafafa;
+                    line-height: 21px;
+                    margin-right: 0;
+                    border-radius: 0;
+                    text-transform: uppercase;
+                    font-family: $robotoCondesed;
+
+                    &::before {
+                        position: absolute;
+                        width: -moz-calc(100% + 2px);
+                        width: -webkit-calc(100% + 2px);
+                        width: -ms-calc(100% + 2px);
+                        width: calc(100% + 2px);
+                        height: 2px;
+                        content: "";
+                        top: -1px;
+                        left: -1px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+#product-recommendations {
+    .related-products {
+        .widget-title {
+            border-top: 2px solid #555555;
+            text-align: left;
+            text-align: left;
+            padding-top: 15px;
+            margin-bottom: 10px;
+
+            .box-title {
+                color: #141414;
+                font-size: 24px;
+                letter-spacing: .02em;
+                font-weight: 600;
+                text-transform: uppercase;
+                position: relative;
+                margin-bottom: 12px;
+                padding: 0 25px;
+                display: inline-block;
+                font-size: 16px;
+                padding: 0;
+    
+                &::before, &::after {
+                    content: none;
+                }
+            }
+        }
+
+        .products-items {
+            .bx-wrapper {
+                border: none;
+                margin-bottom: 0;
+
+                @media only screen and (min-width: 979.98px) {
+                    max-width: 931px !important;
+                }
+
+                .bx-viewport {
+                    height: 100% !important;
+
+                    .products-item {
+                        @media only screen and (min-width: 768px) {
+                            width: initial !important;
+                        }
+
+                        .products-item-wrapper {
+                            width: 230.9px !important;
+                            position: relative;
+        
+                            @media only screen and (max-width: 767.98px) {
+                                width: 100% !important;
+                            }
+        
+                            @media (min-width: 768px) and (max-width: 979.98px) {
+                                width: 220px !important;
+                            }
+                        }
+                    }
+                }
+
+                .bx-controls {
+                    .bx-controls-direction {
+                        .bx-prev {
+                            width: 40px;
+                            height: 120px;
+                            top: 35%;
+                            left: 0;
+                            background: url("../../../images/arrow-left.png") no-repeat;
+                            background-color: rgba(0, 0, 0, 0.3);
+                            background-size: 40px;
+                        }
+    
+                        .bx-next {
+                            width: 40px;
+                            height: 120px;
+                            top: 35%;
+                            right: 0;
+                            background: url("../../../images/arrow-right.png") no-repeat;
+                            background-color: rgba(0, 0, 0, 0.3);
+                            background-size: 40px;
+                        }
                     }
                 }
             }
